<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".sign_up">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RelativeLayout
            android:id="@+id/header"
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:background="@color/colorPrimary">

            <ImageView
                android:id="@+id/logo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_above="@+id/textView"
                android:layout_alignParentStart="true"
                android:layout_marginBottom="24dp"
                android:contentDescription="@string/app_name"
                android:src="@drawable/haluih" />

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="45dp"
                android:text="@string/sign_up_2"
                android:textColor="#fff"
                android:textSize="20sp" />

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/header"
            android:padding="20dp"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:layout_marginTop="-40dp"
            android:gravity="center"
            android:background="@drawable/rounded_btn_white">

            <EditText
                android:id="@+id/nama"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/nama"
                android:padding="10dp"
                android:drawableEnd="@drawable/ic_person_outline_blue_grey_700_24dp"/>

            <EditText
                android:id="@+id/txtMail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/nama"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:padding="10dp"
                android:drawableEnd="@drawable/ic_mail_outline_blue_grey_700_24dp"/>

            <EditText
                android:id="@+id/txtPass"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/txtMail"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:padding="10dp"
                android:drawableEnd="@drawable/ic_visibility_blue_grey_700_24dp"/>

        </RelativeLayout>

        <Button
            android:id="@+id/btn1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/content"
            android:background="@drawable/round1"
            android:layout_marginTop="10dp"
            android:layout_marginStart="40dp"
            android:layout_marginEnd="40dp"
            android:textColor="#fff"
            android:text="@string/sign_in"/>

        <Button
            android:id="@+id/btn2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/btn1"
            android:layout_gravity="center"
            android:layout_marginTop="5dp"
            android:layout_marginStart="40dp"
            android:layout_marginEnd="40dp"
            android:textColor="#fff"
            android:background="@drawable/rounded_btn_blue"
            android:text="@string/sign_fb" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/haveAccount"
            android:layout_below="@id/btn2"
            android:layout_marginTop="10dp"
            android:layout_centerHorizontal="true"/>

    </RelativeLayout>

</ScrollView>
