<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.ranisavira.haluih.sign_in">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RelativeLayout
            android:id="@+id/header"
            android:layout_width="match_parent"
            android:layout_height="350dp"
            android:layout_marginTop="-45dp"
            android:background="@color/colorPrimary">

            <ImageView
                android:id="@+id/logo"
                android:layout_width="match_parent"
                android:layout_height="250dp"
                android:src="@drawable/haluih"
                android:layout_centerHorizontal="true"
                android:contentDescription="@string/app_name"
                />
            <TextView
                android:id="@+id/signin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="SIGN IN"
                android:textStyle="bold"
                android:textSize="20sp"
                android:layout_marginBottom="5dp"
                android:layout_below="@id/logo"
                android:layout_centerHorizontal="true"
                android:textColor="#fff"/>
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/header"
            android:padding="20dp"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:layout_marginTop="-75dp"
            android:gravity="center"
            android:background="@drawable/round2">

            <EditText
                android:id="@+id/txtMail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/signin"
                android:hint="@string/email"
                android:textStyle="italic"
                android:inputType="textEmailAddress"
                android:padding="10dp"
                android:drawableEnd="@drawable/ic_person_outline_blue_grey_700_24dp"/>
            <EditText
                android:id="@+id/txtPass"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/txtMail"
                android:hint="@string/password"
                android:textStyle="italic"
                android:inputType="textPassword"
                android:padding="10dp"
                android:drawableEnd="@drawable/ic_visibility_blue_grey_700_24dp"/>

        </RelativeLayout>

        <Button
            android:id="@+id/btn1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/content"
            android:background="@drawable/round1"
            android:layout_marginTop="20dp"
            android:layout_marginStart="40dp"
            android:layout_marginEnd="40dp"
            android:textColor="#fff"
            android:text="@string/sign_in"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/havent"
            android:id="@+id/textView"
            android:layout_alignParentBottom="true"
            android:layout_alignLeft="@+id/btn1"
            android:layout_alignStart="@+id/btn1"
            android:layout_marginLeft="59dp"
            android:layout_marginStart="59dp"
            android:layout_below="@id/btn1"
            android:layout_marginTop="30dp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Sign up."
            android:textStyle="bold"
            android:layout_alignParentBottom="true"
            android:layout_toRightOf="@+id/textView"
            android:layout_marginLeft="6dp"
            android:layout_toEndOf="@+id/textView" />
    </RelativeLayout>

</ScrollView>
